# lumi-ai

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  start.sh
server/: README.md  asr_server.py  pyproject.toml  start.sh
src/lumi/: __init__.py  __main__.py  audio.py  s2t.py  transcribe.py
src/lumi/cli/: __init__.py  s2t_cli.py
tests/: test_audio.py  test_s2t.py  test_transcribe.py
